# fhir

./: .gitignore
openhcos/: README.md
openhcos/projects/go-fhir/: build.sh
openhcos/projects/hello-wasm/: .gitignore  Cargo.toml  README.md  hello_wasm.js  index.js
openhcos/projects/hello-wasm/src/: lib.rs
openhcos/projects/wasm-red/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
openhcos/projects/wasm-red/bindout/: index.js  wasm_red.js
openhcos/projects/wasm-red/doc/: proto-fhir.html  proto-fhir.md
openhcos/projects/wasm-red/proto/: addressbook.proto
openhcos/projects/wasm-red/src/: lib.rs
openhcos/projects/wasm-red/src/proto/: addressbook.rs  codes.rs  datatypes.rs  mod.rs
