[package]
name = "wasm-red"
version = "0.0.1"
authors = ["y12studio <y12studio@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# rand = "0.6.0-pre.1"
# rand panic when use wasm-bindgen · Issue #616 · rust-random/rand  https://github.com/rust-random/rand/issues/616
# https://github.com/alexcrichton/wbg-rand
wbg-rand = "0.4"
